# sociorm

./: .gitmodules  CMakeLists.txt  README  README.md
sociorm/: CMakeLists.txt  orm.cpp  orm.hpp  ptr.hpp  query.hpp  safe_bool.hpp  sociorm.cpp
sociorm/examples/: ex1.cpp
sociorm/sociorm/: base.hpp  mapping.hpp  orm.hpp  ptr.hpp  query.hpp  serial.hpp
sociorm/sociorm/detail/: bind_values_action.hpp  class_info.hpp  collect_names_and_exchange_action.hpp  field_proxy.hpp  orm_backend.hpp  type_info_ptr_less.hpp
sociorm/src/: orm.cpp
